--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
@@ -10,13 +11,6 @@
         android:id="@+id/play_answer_choices_area"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <!--<TextView-->
-            <!--android:id="@+id/countdown_timer_text_view"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--tools:text="5"/>-->
 
         <LinearLayout
             android:id="@+id/question_container"
@@ -172,6 +166,19 @@
                 android:layout_margin="40dp"
                 android:background="@drawable/swipe_circle"
                 android:layout_centerInParent="true" />
+
+            <com.serhatsurguvec.continuablecirclecountdownview.ContinuableCircleCountDownView
+                android:id="@+id/circleCountdown"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerInParent="true"
+                app:shapeRate="10"
+                app:shadowEnabled="true"
+                app:innerColor="@color/colorAccent"
+                app:outerColor="@color/colorPrimary"
+                app:progressColor="@color/colorPrimaryDark"
+                app:progress="0"
+                app:textSize="0sp"/>
 
             <ImageView
                 android:id="@+id/swipe_arrow_3"
