countdown circle fixed

--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/scores_grid"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="10dp"
         android:paddingTop="4dp"
