--- a/app/src/main/res/layout-sw600dp/activity_play.xml
+++ b/app/src/main/res/layout-sw600dp/activity_play.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/scores_grid"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="10dp"
         android:paddingTop="4dp"
@@ -20,14 +20,14 @@
 
         <ImageButton
             android:id="@+id/play_home_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_centerVertical="true"
             android:background="@color/colorAccent"
             android:foreground="?android:attr/selectableItemBackground"
-            android:src="@drawable/ic_home_white_24dp"
+            android:src="@drawable/ic_home_white_48dp"
             android:contentDescription="@string/click_to_go_home_description" />
 
         <RelativeLayout
@@ -35,17 +35,11 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true">
 
-            <com.swipeacademy.multiplicationtableswipe.Util.Circle
-                android:id="@+id/remaining_circle"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_centerInParent="true" />
-
             <TextView
                 android:id="@+id/remaining_questions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="50sp"
+                android:textSize="80sp"
                 android:textColor="#000"
                 android:text="@string/remaining_questions"
                 android:layout_centerInParent="true" />
