--- a/app/src/main/res/layout-sw600dp/activity_play_result.xml
+++ b/app/src/main/res/layout-sw600dp/activity_play_result.xml
@@ -31,7 +31,8 @@
             android:layout_below="@id/results_comment"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
-            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textSize="20sp"
             android:text="@string/final_score"/>
 
         <View
