--- a/app/src/main/res/layout/activity_play_result.xml
+++ b/app/src/main/res/layout/activity_play_result.xml
@@ -31,7 +31,8 @@
             android:layout_below="@id/results_comment"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
-            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textSize="20sp"
             android:text="@string/final_score"/>
 
         <View
@@ -41,17 +42,6 @@
             android:layout_below="@id/results_score"
             android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true" />
-
-        <!--<Button-->
-            <!--android:id="@+id/results_replay"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@id/center_placement"-->
-            <!--android:layout_alignRight="@id/center_placement"-->
-            <!--android:backgroundTint="@color/colorPrimary"-->
-            <!--android:drawableTop="@drawable/ic_replay_white_24dp"-->
-            <!--android:text="@string/replay_button"-->
-            <!--android:textColor="@color/white" />-->
 
         <Button
             android:id="@+id/results_home"
@@ -83,7 +73,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/white">
-
     </FrameLayout>
 
 </LinearLayout>
