--- a/app/src/main/res/layout-sw600dp/fragment_play.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_play.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
@@ -126,14 +127,26 @@
                 android:background="@drawable/swipe_circle"
                 android:layout_centerInParent="true" />
 
+            <com.serhatsurguvec.continuablecirclecountdownview.ContinuableCircleCountDownView
+                android:id="@+id/circleCountdown"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                app:shapeRate="6"
+                app:shadowEnabled="false"
+                app:innerColor="@color/colorAccent"
+                app:outerColor="@color/colorPrimary"
+                app:progressColor="@color/colorPrimaryDark"
+                app:textSize="0sp"/>
+
             <ImageView
                 android:id="@+id/swipe_arrow_3"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/swipe_arrow"
                 android:layout_centerInParent="true"
-                android:layout_toEndOf="@id/swipe_circle_img"
-                android:layout_toRightOf="@id/swipe_circle_img" />
+                android:layout_toEndOf="@id/circleCountdown"
+                android:layout_toRightOf="@id/circleCountdown" />
 
             <ImageView
                 android:id="@+id/swipe_arrow_4"
@@ -141,7 +154,7 @@
                 android:layout_height="25dp"
                 android:src="@drawable/swipe_arrow"
                 android:layout_centerInParent="true"
-                android:layout_below="@id/swipe_circle_img"
+                android:layout_below="@id/circleCountdown"
                 android:rotation="90" />
 
             <ImageView
@@ -151,8 +164,8 @@
                 android:src="@drawable/swipe_arrow"
                 android:rotation="180"
                 android:layout_centerInParent="true"
-                android:layout_toStartOf="@id/swipe_circle_img"
-                android:layout_toLeftOf="@id/swipe_circle_img" />
+                android:layout_toStartOf="@id/circleCountdown"
+                android:layout_toLeftOf="@id/circleCountdown" />
 
             <ImageView
                 android:id="@+id/swipe_arrow_2"
@@ -161,7 +174,7 @@
                 android:src="@drawable/swipe_arrow"
                 android:rotation="270"
                 android:layout_centerInParent="true"
-                android:layout_above="@id/swipe_circle_img" />
+                android:layout_above="@id/circleCountdown" />
 
             <TextView
                 android:id="@+id/choice1"
