--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -55,7 +55,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/appBarLayout"
-        android:layout_above="@id/history_adView"></android.support.v4.view.ViewPager>
+        android:layout_above="@id/history_adView">
+
+    </android.support.v4.view.ViewPager>
 
 
 </RelativeLayout>
